// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceItem should render correctly with button 1`] = `
<div>
  <div
    className="service-item neutral-background"
    onClick={[Function]}
    role="button"
    style={
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
      }
    }
    tabIndex={0}
  >
    <div
      className="expand-area"
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="bar1"
      />
      <div
        className="icon-wrap"
      >
        <i
          className="icon-slim icon-right-dir"
          style={Object {}}
        />
      </div>
    </div>
    <div
      className="content-wrap"
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="content"
      >
        <div
          className="service-name truncate-text selectable"
          title="UUID: service-uuid-1"
        >
          Service Name
        </div>
        <button
          className="btn btn-primary btn-nordic"
          onClick={[Function]}
        >
          <img
            alt=""
            src="path/to/icon.png"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "display": "none",
      }
    }
  />
</div>
`;

exports[`ServiceItem should render correctly with no button 1`] = `
<div>
  <div
    className="service-item neutral-background"
    onClick={[Function]}
    role="button"
    style={
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
      }
    }
    tabIndex={0}
  >
    <div
      className="expand-area"
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="bar1"
      />
      <div
        className="icon-wrap"
      >
        <i
          className="icon-slim icon-right-dir"
          style={Object {}}
        />
      </div>
    </div>
    <div
      className="content-wrap"
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="content"
      >
        <div
          className="service-name truncate-text selectable"
          title="UUID: service-uuid-1"
        >
          Service Name
        </div>
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "display": "none",
      }
    }
  />
</div>
`;
